# BIOS-BCIAPPS

./: CMakeLists.txt  README.md
BIOS_BCIAPPS_GUI/: CMakeLists.txt
BIOS_BCIAPPS_GUI/BUILD2010/: ALL_BUILD.vcxproj  BIOS_BCI.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
BIOS_BCIAPPS_GUI/BUILD2010/Win32/Release/ALL_BUILD/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
BIOS_BCIAPPS_GUI/BUILD2010/Win32/Release/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
BIOS_BCIAPPS_GUI/BUILD2010/apps/EPOC_GYRO_GUI/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BCI_GUI.vcxproj  BCI_GUI.vcxproj.filters  BIOS-BCI.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  moc_BCI_mainWindow.cxx  moc_BCI_mainWindow.cxx_parameters  moc_glwidget.cxx  moc_glwidget.cxx_parameters  qplayer.qrc.depends  qrc_qplayer.cxx  ui_BCI_mainWindow.h
BIOS_BCIAPPS_GUI/BUILD2010/apps/EPOC_GYRO_GUI/BCI_GUI.dir/Release/: BCI_setIcon.res  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
BIOS_BCIAPPS_GUI/apps/EPOC_GYRO_GUI/: BCI_mainWindow.cpp  BCI_mainWindow.h  BCI_mainWindow.ui  BCI_setIcon.aps  BCI_setIcon.rc  CMakeLists.txt  glwidget.cpp  glwidget.h  gyroData.cpp  gyroGlut.cpp  main.cpp  ui_BCI_mainWindow.h
apps/EPOC_GYROGLUT/: CMakeLists.txt  main.cpp
apps/EPOC_GYRORAW/: CMakeLists.txt  main.cpp
apps/EPOC_OSCBRIDGE/: CMakeLists.txt  main.cpp
